fix shifting width b/w pages with & without scrollbar

--- a/src/js/components/Portfolio/Portfolio.css
+++ b/src/js/components/Portfolio/Portfolio.css
@@ -8,12 +8,16 @@
     overflow-y: scroll;
 }
 
+.nonTemplate {
+    overflow: hidden;
+}
 
 .imgResponsive {
     display: block;
     max-width: 100%;
     height: auto;
 }
+
 
 
 
