--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -35,7 +35,7 @@ $susy: (columns: 12,
 
 
 .column1 {
-  @include span(4 of 12);
+  @include span(4 of 12 at 1);
 }
 
 .column2 {
